# erpnext_chatgpt

./: .gitignore  MANIFEST.in  Readme.md  pyproject.toml  requirements.txt  setup.py
erpnext_chatgpt/: api.py  hooks.py  module.txt  modules.txt  openai_settings.py  patches.txt
erpnext_chatgpt/config/: desktop.py  docs.py  hooks.py
erpnext_chatgpt/doctype/openai_settings/: openai_settings.js  openai_settings.py
erpnext_chatgpt/erpnext_chatgpt/: api.py  tools.py
erpnext_chatgpt/erpnext_chatgpt/doctype/openai_settings/: openai_settings.js  openai_settings.json
erpnext_chatgpt/public/js/: frontend.js  openai_settings.js
erpnext_chatgpt/templates/pages/: openai_interface.html
