[project]
name = "erpnext_chatgpt"
authors = [
    { name = "William Luke", email = "williamluke4@gmail.com"}
]
description = "ERPNext app for OpenAI integration"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "openai==1.32.0"
]
[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"