[project]
name = "erpnext_chatgpt"
version = "0.1.0"  # Or fetch dynamically if needed
description = "ERPNext ChatGPT"
authors = [
    { name = "Mark H", email = "no-reply@google.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai==1.32.0",
    # Add any other dependencies from requirements.txt
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["erpnext_chatgpt*"]
